# cumulocity-rust-ms-example

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh
c8y-ms-sdk/: Cargo.toml
c8y-ms-sdk/src/: lib.rs  microservice_subscription.rs  platform.rs
c8y-sdk/: Cargo.toml
c8y-sdk/src/: cumulocity_error.rs  inventory.rs  lib.rs
rust-ms/: .gitignore  Cargo.toml
rust-ms/src/: main.rs
