[package]
name = "c8y-ms-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c8y-sdk = { path = "../c8y-sdk" }
actix-utils = "3.0"
actix-web = { version = "4.5" }
tokio-cron-scheduler = { version = "0.10", features = ["signal"] }
once_cell = "1.19"
tokio = "1.37"
dashmap = "5.5"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"] }
base64 = "0.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
