[package]
name = "c8y-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
